# city-scout

./: .env.example  .gitignore  README.md  analyzer.py  main.py  models.py  pyproject.toml  requirements.txt  scraper.py
back/: analyzer.py  config.py  main.py  scraper.py
front/: app.js  index.html  style.css
frontend/: index.html
tests/: test_analyzer.py  test_models.py  test_scraper.py
