[tool.poetry]
name = "city-risk-scout"
version = "0.1.0"
description = ""
authors = ["aitoolkit <med.taha.elahmar@gmail.com>"]
readme = "README.md"
packages = [{include = "city_risk_scout"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
