[tool.poetry]
name = "city-risk-scout"
version = "0.1.0"
description = ""
authors = ["aitoolkit <med.taha.elahmar@gmail.com>"]
readme = "README.md"
packages = [{include = "city_risk_scout"}]

[tool.poetry.dependencies]
python = "^3.13.2"
anthropic = "^0.88.0"
fastapi = "^0.135.3"
uvicorn = "^0.42.0"
scrapling = "^0.4.3"
pydantic = "^2.12.5"
openai = "^2.30.0"
curl-cffi = "^0.14.0"
playwright = "^1.58.0"
browserforge = "^1.2.4"
python-dotenv = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
